--- a/app/src/main/res/layout/constrain_layout.xml
+++ b/app/src/main/res/layout/constrain_layout.xml
@@ -33,15 +33,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/singaporeskyline" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="75dp"
-        android:layout_height="70dp"
-        android:clickable="true"
-        app:srcCompat="@drawable/stella"
-        tools:layout_editor_absoluteX="320dp"
-        tools:layout_editor_absoluteY="185dp" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="wrap_content"
@@ -144,6 +135,7 @@
         android:clickable="true"
         android:tint="#00FFFFFF"
         app:backgroundTint="#00FFFFFF"
+        app:tint="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:maxImageSize="48dp"
