--- a/app/src/main/res/layout/constrain_layout.xml
+++ b/app/src/main/res/layout/constrain_layout.xml
@@ -65,8 +65,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="258dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -93,8 +93,8 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="254dp"
+        android:layout_height="42dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -103,9 +103,9 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="330dp"
-        android:layout_height="250dp"
-        android:text="Singapore (AFI: /sinɡaˈpore/[5]), ufficialmente Repubblica di Singapore (in malese Republik Singapura; in inglese Republic of Singapore; in cinese 新加坡共和国, Xīnjiāpō Gònghéguó; in tamil சிங்கப்பூர் குடியரசு, Ciŋkappūr Kudiyarasu), è una città-Stato del sud-est asiatico, situata sull'estrema punta meridionale della penisola malese, 152 km a nord dell'equatore. Si sviluppa su un arcipelago formato da 58 isole, la più grande e principale delle quali è l'isola di Singapore che ospita la metropoli."
+        android:layout_width="332dp"
+        android:layout_height="231dp"
+        android:text="@string/singapore_description"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="@+id/guideline9" />
 
@@ -135,7 +135,7 @@
         android:clickable="true"
         android:tint="#00FFFFFF"
         app:backgroundTint="#00FFFFFF"
-        app:tint="#FFFFFF"
+        app:tint="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:maxImageSize="48dp"
